# little-bigtable

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  bigtable  bigtable.c  bigtablecout.txt  buildrunbt.sh  buildrunhash.sh  cmake_install.cmake  hash.c  hashcout.txt  plot.py  report.docx  res-0.html  res.html  trace.txt
scripts/: benchmark.sh  buildrunbt.sh
src/: bigtable.c
src/include/: bigtable.h
